fix sign-in banner z-index (make it higher)

--- a/server/static/sass/_sign_in.scss
+++ b/server/static/sass/_sign_in.scss
@@ -85,7 +85,7 @@
     text-align: center;
     padding-top: 20px;
     padding-bottom: 20px;
-    z-index: 100;
+    z-index: 1000;
 
     border: 1px solid rgba(34, 25, 25, 0.25);
     border-top: 0;
